tests/golden/phase4a/compile-pass/closure_capture_read.rua
fn main() -> i64 {
    let factor = 3;
    let scale = |value| value * factor;
    scale(14)
}
