tests/golden/phase4a/compile-fail/closure_return_mismatch.rua
fn main() {
    let stringify = |value: String| -> bool { value };
    stringify("value");
}
